--- a/src/components/resources.css
+++ b/src/components/resources.css
@@ -4,8 +4,20 @@
 .css-178xtz6-MuiPaper-root-MuiAccordion-root.Mui-expanded{
     margin: 0 !important;
 }
-.css-o4b71y-MuiAccordionSummary-content{
+.css-o4b71y-MuiAccordionSummary-content,.css-17o5nyn{
     justify-content: right !important;
+}
+.css-17o5nyn{
+    margin: 0 !important;
+}
+.css-17o5nyn.Mui-expanded {
+    margin:0px 0px !important;
+}
+.css-f2z1m3.Mui-expanded {
+    margin:0px 0px !important;
+}
+.css-1iji0d4.Mui-expanded {
+    min-height: 0px !important;
 }
 .css-178xtz6-MuiPaper-root-MuiAccordion-root,.css-14bscn5-MuiPaper-root-MuiAccordion-root{
     box-shadow: none !important;
